[gd_scene format=3 uid="uid://bdajtvsxukxq1"]

[ext_resource type="Script" uid="uid://cgslc4cey4td5" path="res://scripts/game/question_display.gd" id="1_hu4h3"]
[ext_resource type="Script" uid="uid://c7i52175ijmhh" path="res://scripts/questions/general_question.gd" id="2_5mnri"]
[ext_resource type="FontFile" uid="uid://bbv5lwyu2bjir" path="res://assets/Fonts/MedodicaRegular.otf" id="4_5mnri"]
[ext_resource type="Script" uid="uid://duqbeoyrldq87" path="res://scripts/game/labelButton.gd" id="5_krmh0"]

[sub_resource type="Resource" id="Resource_krmh0"]
script = ExtResource("2_5mnri")
question = "Is scrum fun?"
isTrueOrFalse = true
correctTOFAnswer = 1
metadata/_custom_type_script = "uid://c7i52175ijmhh"

[sub_resource type="Resource" id="Resource_hfsmb"]
script = ExtResource("2_5mnri")
question = "What is SCRUM?"
isFourAnswers = true
firstAnswer = "yes"
secondAnswer = "no"
thirdAnswer = "bram"
fourthAnswer = "agile"
correctAnswer = 4
metadata/_custom_type_script = "uid://c7i52175ijmhh"

[sub_resource type="Resource" id="Resource_o5no5"]
script = ExtResource("2_5mnri")
question = "burger??????????????????"
isFourAnswers = true
pointsWorth = 1.0
firstAnswer = "BURGER YUMMY :D"
secondAnswer = "BURGER NO YUMMY :("
thirdAnswer = "fog"
fourthAnswer = "its better to cum in the sink then to sink in the cum"
correctAnswer = 4
metadata/_custom_type_script = "uid://c7i52175ijmhh"

[sub_resource type="LabelSettings" id="LabelSettings_krmh0"]
font = ExtResource("4_5mnri")
font_size = 68
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[node name="QuestionDisplay" type="Node2D" unique_id=2084494044]
script = ExtResource("1_hu4h3")
questions = Array[ExtResource("2_5mnri")]([SubResource("Resource_krmh0"), SubResource("Resource_hfsmb"), SubResource("Resource_o5no5")])

[node name="BoxContainer" type="Node2D" parent="." unique_id=747140308]

[node name="TheQuestion" type="Label" parent="." unique_id=1974515439]
offset_left = 110.0
offset_top = 90.0
offset_right = 111.0
offset_bottom = 210.0
theme_override_font_sizes/font_size = 70
text = "lljknawd"
label_settings = SubResource("LabelSettings_krmh0")
vertical_alignment = 1

[node name="Four quest Button container" type="GridContainer" parent="." unique_id=1076086839]
offset_left = 144.0
offset_top = 639.0
offset_right = 835.0
offset_bottom = 1016.0
theme_override_constants/h_separation = 250
theme_override_constants/v_separation = 175
columns = 2

[node name="answer 1" type="Label" parent="Four quest Button container" unique_id=996265083]
layout_mode = 2
text = "burger1"
label_settings = SubResource("LabelSettings_krmh0")
vertical_alignment = 1
script = ExtResource("5_krmh0")
metadata/_custom_type_script = "uid://duqbeoyrldq87"

[node name="answer 2" type="Label" parent="Four quest Button container" unique_id=1407329051]
layout_mode = 2
text = "burger2"
label_settings = SubResource("LabelSettings_krmh0")
vertical_alignment = 1
script = ExtResource("5_krmh0")
metadata/_custom_type_script = "uid://duqbeoyrldq87"

[node name="answer 3" type="Label" parent="Four quest Button container" unique_id=1775981025]
layout_mode = 2
text = "burger3"
label_settings = SubResource("LabelSettings_krmh0")
vertical_alignment = 1
script = ExtResource("5_krmh0")
metadata/_custom_type_script = "uid://duqbeoyrldq87"

[node name="answer 4" type="Label" parent="Four quest Button container" unique_id=1440346973]
layout_mode = 2
text = "burger4"
label_settings = SubResource("LabelSettings_krmh0")
vertical_alignment = 1
script = ExtResource("5_krmh0")
metadata/_custom_type_script = "uid://duqbeoyrldq87"

[node name="Open quest button container" type="CenterContainer" parent="." unique_id=255822485]
offset_left = 343.0
offset_top = 753.0
offset_right = 579.0
offset_bottom = 844.0

[node name="User input" type="LineEdit" parent="Open quest button container" unique_id=375039124]
layout_mode = 2
theme_override_font_sizes/font_size = 60
expand_to_text_length = true

[node name="FalseButton" type="Label" parent="." unique_id=163065864]
offset_left = 164.0
offset_top = 762.0
offset_right = 309.0
offset_bottom = 830.0
text = "FALSE"
label_settings = SubResource("LabelSettings_krmh0")
vertical_alignment = 1
script = ExtResource("5_krmh0")
metadata/_custom_type_script = "uid://duqbeoyrldq87"

[node name="TrueButton" type="Label" parent="." unique_id=1580599466]
offset_left = 625.0
offset_top = 762.0
offset_right = 744.0
offset_bottom = 830.0
text = "TRUE"
label_settings = SubResource("LabelSettings_krmh0")
vertical_alignment = 1
script = ExtResource("5_krmh0")
metadata/_custom_type_script = "uid://duqbeoyrldq87"

[connection signal="pressed" from="Four quest Button container/answer 1" to="." method="_on_answer_one_pressed"]
[connection signal="pressed" from="Four quest Button container/answer 2" to="." method="_on_answer_two_pressed"]
[connection signal="pressed" from="Four quest Button container/answer 3" to="." method="_on_answer_three_pressed"]
[connection signal="pressed" from="Four quest Button container/answer 4" to="." method="_on_answer_four_pressed"]
[connection signal="text_submitted" from="Open quest button container/User input" to="." method="_on_user_input_text_submitted"]
[connection signal="pressed" from="FalseButton" to="." method="_on_false_pressed"]
[connection signal="pressed" from="TrueButton" to="." method="_on_true_pressed"]
